--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      probando
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -14,4 +14,5 @@
   </ion-header>
 
   <app-explore-container name="Tab 1 page"></app-explore-container>
+  <h1>aaaaaaa</h1>
 </ion-content>
